template-hello-world-ng/platforms/ios/build/emulator/metadata-generation-stderr-x86_64.txt
clang version 4.0.0 (tags/RELEASE_400/final)
Target: x86_64-apple-darwin16.7.0
Thread model: posix
InstalledDir: 
clang Invocation:
 "clang-tool" "-cc1" "-triple" "x86_64-apple-ios8.0.0" "-Wdeprecated-objc-isa-usage" "-Werror=deprecated-objc-isa-usage" "-Werror=implicit-function-declaration" "-fsyntax-only" "-disable-free" "-disable-llvm-verifier" "-discard-value-names" "-main-file-name" "umbrella.h" "-mrelocation-model" "pic" "-pic-level" "2" "-mthread-model" "posix" "-mdisable-fp-elim" "-masm-verbose" "-munwind-tables" "-target-cpu" "core2" "-target-linker-version" "301.1" "-v" "-dwarf-column-info" "-debugger-tuning=lldb" "-resource-dir" "../lib/clang/4.0.0" "-isysroot" "/Applications/Xcode-beta.app/Contents/Developer/Platforms/iPhoneSimulator.platform/Developer/SDKs/iPhoneSimulator11.0.sdk" "-D" "__NATIVESCRIPT_METADATA_GENERATOR=1" "-I" "/Users/progressuser/git/ns-dev-days/template-hello-world-ng/platforms/ios/build/emulator/include" "-I" "/Users/progressuser/git/ns-dev-days/template-hello-world-ng/platforms/ios/internal" "-I" "/Users/progressuser/git/ns-dev-days/template-hello-world-ng/platforms/ios/internal/TKLiveSync/include" "-F/Users/progressuser/git/ns-dev-days/template-hello-world-ng/platforms/ios/build/emulator" "-F/Users/progressuser/git/ns-dev-days/template-hello-world-ng/platforms/ios/internal/" "-F/Users/progressuser/git/ns-dev-days/template-hello-world-ng/platforms/ios/../../node_modules/tns-core-modules-widgets/platforms/ios" "-D" "DEBUG=1" "-Wno-unknown-pragmas" "-Wno-ignored-attributes" "-Wno-nullability-completeness" "-Wno-expansion-to-defined" "-std=gnu99" "-fdebug-compilation-dir" "/Users/progressuser/git/ns-dev-days/template-hello-world-ng/platforms/ios/internal/metadata-generator/bin" "-ferror-limit" "0" "-fmessage-length" "0" "-stack-protector" "1" "-fblocks" "-fimplicit-module-maps" "-fobjc-runtime=ios-8.0.0" "-fencode-extended-block-signature" "-fobjc-exceptions" "-fexceptions" "-fmax-type-align=16" "-fdiagnostics-show-option" "-x" "objective-c" "umbrella.h"

ignoring nonexistent directory "/Users/progressuser/git/ns-dev-days/template-hello-world-ng/platforms/ios/build/emulator/include"
ignoring nonexistent directory "/Applications/Xcode-beta.app/Contents/Developer/Platforms/iPhoneSimulator.platform/Developer/SDKs/iPhoneSimulator11.0.sdk/usr/local/include"
ignoring nonexistent directory "/Applications/Xcode-beta.app/Contents/Developer/Platforms/iPhoneSimulator.platform/Developer/SDKs/iPhoneSimulator11.0.sdk/Library/Frameworks"
#include "..." search starts here:
#include <...> search starts here:
 /Users/progressuser/git/ns-dev-days/template-hello-world-ng/platforms/ios/internal
 /Users/progressuser/git/ns-dev-days/template-hello-world-ng/platforms/ios/internal/TKLiveSync/include
 /Users/progressuser/git/ns-dev-days/template-hello-world-ng/platforms/ios/build/emulator (framework directory)
 /Users/progressuser/git/ns-dev-days/template-hello-world-ng/platforms/ios/internal (framework directory)
 /Users/progressuser/git/ns-dev-days/template-hello-world-ng/platforms/ios/../../node_modules/tns-core-modules-widgets/platforms/ios (framework directory)
 ../lib/clang/4.0.0/include
 /Applications/Xcode-beta.app/Contents/Developer/Platforms/iPhoneSimulator.platform/Developer/SDKs/iPhoneSimulator11.0.sdk/usr/include
 /Applications/Xcode-beta.app/Contents/Developer/Platforms/iPhoneSimulator.platform/Developer/SDKs/iPhoneSimulator11.0.sdk/System/Library/Frameworks (framework directory)
End of search list.
clang version 4.0.0 (tags/RELEASE_400/final)
Target: x86_64-apple-darwin16.7.0
Thread model: posix
InstalledDir: 
clang Invocation:
 "objc-metadata-generator" "-cc1" "-triple" "x86_64-apple-ios8.0.0" "-Wdeprecated-objc-isa-usage" "-Werror=deprecated-objc-isa-usage" "-Werror=implicit-function-declaration" "-fsyntax-only" "-disable-free" "-disable-llvm-verifier" "-discard-value-names" "-main-file-name" "umbrella.h" "-mrelocation-model" "pic" "-pic-level" "2" "-mthread-model" "posix" "-mdisable-fp-elim" "-masm-verbose" "-munwind-tables" "-target-cpu" "core2" "-target-linker-version" "301.1" "-v" "-dwarf-column-info" "-debugger-tuning=lldb" "-resource-dir" "../lib/clang/4.0.0" "-isysroot" "/Applications/Xcode-beta.app/Contents/Developer/Platforms/iPhoneSimulator.platform/Developer/SDKs/iPhoneSimulator11.0.sdk" "-D" "__NATIVESCRIPT_METADATA_GENERATOR=1" "-I" "/Users/progressuser/git/ns-dev-days/template-hello-world-ng/platforms/ios/build/emulator/include" "-I" "/Users/progressuser/git/ns-dev-days/template-hello-world-ng/platforms/ios/internal" "-I" "/Users/progressuser/git/ns-dev-days/template-hello-world-ng/platforms/ios/internal/TKLiveSync/include" "-F/Users/progressuser/git/ns-dev-days/template-hello-world-ng/platforms/ios/build/emulator" "-F/Users/progressuser/git/ns-dev-days/template-hello-world-ng/platforms/ios/internal/" "-F/Users/progressuser/git/ns-dev-days/template-hello-world-ng/platforms/ios/../../node_modules/tns-core-modules-widgets/platforms/ios" "-D" "DEBUG=1" "-Wno-unknown-pragmas" "-Wno-ignored-attributes" "-Wno-nullability-completeness" "-Wno-expansion-to-defined" "-std=gnu99" "-fdebug-compilation-dir" "/Users/progressuser/git/ns-dev-days/template-hello-world-ng/platforms/ios/internal/metadata-generator/bin" "-ferror-limit" "0" "-fmessage-length" "0" "-stack-protector" "1" "-fblocks" "-fimplicit-module-maps" "-fobjc-runtime=ios-8.0.0" "-fencode-extended-block-signature" "-fobjc-exceptions" "-fexceptions" "-fmax-type-align=16" "-fdiagnostics-show-option" "-x" "objective-c" "umbrella.h"

clang -cc1 version 4.0.0 based upon LLVM 4.0.0 default target x86_64-apple-darwin16.7.0
ignoring nonexistent directory "/Users/progressuser/git/ns-dev-days/template-hello-world-ng/platforms/ios/build/emulator/include"
ignoring nonexistent directory "/Applications/Xcode-beta.app/Contents/Developer/Platforms/iPhoneSimulator.platform/Developer/SDKs/iPhoneSimulator11.0.sdk/usr/local/include"
ignoring nonexistent directory "/Applications/Xcode-beta.app/Contents/Developer/Platforms/iPhoneSimulator.platform/Developer/SDKs/iPhoneSimulator11.0.sdk/Library/Frameworks"
#include "..." search starts here:
#include <...> search starts here:
 /Users/progressuser/git/ns-dev-days/template-hello-world-ng/platforms/ios/internal
 /Users/progressuser/git/ns-dev-days/template-hello-world-ng/platforms/ios/internal/TKLiveSync/include
 /Users/progressuser/git/ns-dev-days/template-hello-world-ng/platforms/ios/build/emulator (framework directory)
 /Users/progressuser/git/ns-dev-days/template-hello-world-ng/platforms/ios/internal (framework directory)
 /Users/progressuser/git/ns-dev-days/template-hello-world-ng/platforms/ios/../../node_modules/tns-core-modules-widgets/platforms/ios (framework directory)
 ../lib/clang/4.0.0/include
 /Applications/Xcode-beta.app/Contents/Developer/Platforms/iPhoneSimulator.platform/Developer/SDKs/iPhoneSimulator11.0.sdk/usr/include
 /Applications/Xcode-beta.app/Contents/Developer/Platforms/iPhoneSimulator.platform/Developer/SDKs/iPhoneSimulator11.0.sdk/System/Library/Frameworks (framework directory)
End of search list.
In file included from umbrella.h:498:
In file included from /Applications/Xcode-beta.app/Contents/Developer/Platforms/iPhoneSimulator.platform/Developer/SDKs/iPhoneSimulator.sdk/System/Library/Frameworks/CoreML.framework/Headers/CoreML.h:12:
/Applications/Xcode-beta.app/Contents/Developer/Platforms/iPhoneSimulator.platform/Developer/SDKs/iPhoneSimulator11.0.sdk/System/Library/Frameworks/CoreML.framework/Headers/MLFeatureDescription.h:41:12: error: attributes may not be specified on a category
@interface MLFeatureDescription (MLFeatureValueConstraints)
           ^
In file included from umbrella.h:642:
In file included from /Applications/Xcode-beta.app/Contents/Developer/Platforms/iPhoneSimulator.platform/Developer/SDKs/iPhoneSimulator.sdk/System/Library/Frameworks/FileProviderUI.framework/Headers/FileProviderUI.h:11:
In file included from /Applications/Xcode-beta.app/Contents/Developer/Platforms/iPhoneSimulator.platform/Developer/SDKs/iPhoneSimulator11.0.sdk/System/Library/Frameworks/FileProviderUI.framework/Headers/FPUIActionExtensionViewController.h:9:
In file included from /Applications/Xcode-beta.app/Contents/Developer/Platforms/iPhoneSimulator.platform/Developer/SDKs/iPhoneSimulator11.0.sdk/System/Library/Frameworks/FileProvider.framework/Headers/FileProvider.h:8:
/Applications/Xcode-beta.app/Contents/Developer/Platforms/iPhoneSimulator.platform/Developer/SDKs/iPhoneSimulator11.0.sdk/System/Library/Frameworks/FileProvider.framework/Headers/NSFileProviderDomain.h:71:12: error: attributes may not be specified on a category
@interface NSFileProviderExtension (NSFileProviderDomain)
           ^
In file included from umbrella.h:680:
/Applications/Xcode-beta.app/Contents/Developer/Platforms/iPhoneSimulator.platform/Developer/SDKs/iPhoneSimulator11.0.sdk/System/Library/Frameworks/IOSurface.framework/Headers/IOSurfaceBase.h:46:10: fatal error: 'xpc/xpc.h' file not found
#include <xpc/xpc.h>
         ^~~~~~~~~~~
3 errors generated.
